[package]
name = "xxl-container"
version = "0.0.1"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]

[dependencies]
byteorder = "0.4"
bincode = {version="0.4"}
rustc-serialize = {version="0.3", optional = true}
serde = {version="0.6", optional = true}

[features]
default = ["serde", "rustc-serialize"]
